--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^14.2.0",
     "@popperjs/core": "^2.11.7",
     "bootstrap-icons": "^1.10.4",
+    "ngx-infinite-scroll": "^15.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
